--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,8 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* styles/globals.css ou app/globals.css */
+.primary_button {
+  @apply bg-blue_primary text-white border-2 border-black_stroke rounded-full px-8 py-3 text-lg font-semibold transition-all duration-300 hover:bg-opacity-80;
+}
