--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ body {
 
 /* styles/globals.css ou app/globals.css */
 .primary_button {
-  @apply bg-blue_primary text-white border-2 border-black_stroke rounded-full px-8 py-3 text-lg font-semibold transition-all duration-300 hover:bg-blue_primary_hover;
+  @apply bg-blue_primary text-white border-2 border-black_stroke rounded-full px-8 py-3 text-lg font-semibold transition-all duration-300 shadow-lg hover:bg-blue_primary_hover;
 }
 
 .primary_bg {
