--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,14 @@ body {
   @apply bg-blue_primary;
 }
 
+.primary_title {
+  @apply text-white font-bold font-opendyslexic drop-shadow-lg;
+}
+
+.primary_text {
+  @apply text-white text-sm sm:text-lg font-calibri drop-shadow-md text-center;
+}
+
 .add_border {
-  @apply border-2 border-black_stroke
+  @apply border-2 border-black_stroke;
 }
