--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,11 @@ body {
 .primary_text_black {
   @apply text-black text-sm sm:text-lg font-calibri drop-shadow-md text-center;
 }
+
+.primary_title_blue {
+  @apply text-dark_blue_primary font-bold font-opendyslexic drop-shadow-lg;
+}
+
+.primary_text_blue {
+  @apply text-dark_blue_primary text-sm sm:text-lg font-calibri drop-shadow-md text-center;
+}
