--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@ body {
 }
 
 .primary_text {
-  @apply text-white text-sm sm:text-lg font-calibri drop-shadow-md text-center;
+  @apply text-white text-sm sm:text-lg font-calibri drop-shadow-md;
 }
 
 .add_border {
@@ -32,7 +32,7 @@ body {
 }
 
 .primary_text_black {
-  @apply text-black text-sm sm:text-lg font-calibri drop-shadow-md text-center;
+  @apply text-black text-sm sm:text-lg font-calibri drop-shadow-md;
 }
 
 .primary_title_blue {
@@ -40,5 +40,5 @@ body {
 }
 
 .primary_text_blue {
-  @apply text-dark_blue_primary text-sm sm:text-lg font-calibri drop-shadow-md text-center;
+  @apply text-dark_blue_primary text-sm sm:text-lg font-calibri drop-shadow-md;
 }
